--- a/IMDb_Sentiment_Analysis_Using_Deep_Learning.ipynb
+++ b/IMDb_Sentiment_Analysis_Using_Deep_Learning.ipynb
@@ -24,7 +24,7 @@
     "    * Create a dictionary that maps words to unique IDs\n",
     "    * Convert words to ID\n",
     "    * Pad/truncate sequences to unified lengths\n",
-    "2. Build a model using FNN\n",
+    "2. Build a model using FFNN\n",
     "    * Design model structure\n",
     "    * Add layers\n",
     "    * Define loss\n",
@@ -607,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Building a model using FNN"
+    "## 2. Building a model using FFNN"
    ]
   },
   {
